# retail-bi-system

./: .env.example  .gitignore  README.md  docker-compost.yml  main.py  pyproject.toml
data/: dt.py
data/extracted/: products.csv  sales.csv
data/raw/: customers.csv  dt.py
etl/: db_utils.py  extract.py  load.py  run_schema.py  transform.py
ml/: clustering.ipynb  decision_intelligence.ipynb  forecasting.ipynb
ml/.ipynb_checkpoints/: clustering-checkpoint.ipynb  forecasting-checkpoint.ipynb
sql/: schema.sql
sql/analytics/: monthly_trends.sql  product_performance.sql  revenue_by_region.sql  top_customers.sql
